Android control works

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,7 +40,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/alex/godot-games/export_maze_win/maze2d.apk"
+export_path="/home/alex/export_maze2d/maze2d.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -48,13 +48,13 @@ script_encryption_key=""
 [preset.1.options]
 
 graphics/32_bits_framebuffer=true
-one_click_deploy/clear_previous_install=true
+one_click_deploy/clear_previous_install=false
 custom_package/debug=""
 custom_package/release=""
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="com.opushkar.maze2d"
+package/unique_name="com.example.maze2d"
 package/name="maze2d"
 package/signed=false
 screen/immersive_mode=true
@@ -69,12 +69,12 @@ launcher_icons/xxhdpi_144x144=""
 launcher_icons/xhdpi_96x96=""
 launcher_icons/hdpi_72x72=""
 launcher_icons/mdpi_48x48=""
-keystore/debug="/home/alex/my-key.keystore"
-keystore/debug_user="alias_name"
-keystore/debug_password="android1"
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
+keystore/debug="/home/alex/.android/debug.keystore"
+keystore/debug_user="androiddebugkey"
+keystore/debug_password="android"
+keystore/release="/home/alex/.android/debug.keystore"
+keystore/release_user="androiddebugkey"
+keystore/release_password="android"
 apk_expansion/enable=false
 apk_expansion/SALT=""
 apk_expansion/public_key=""
